{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 130,
  "lineage": "047d0617-2aa5-afaa-34e9-c487248aa965",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofile_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:742982185201:instance/i-0c5ece166aadbf5bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5ece166aadbf5bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e636b6441d6ebe18",
            "private_dns": "ip-10-0-1-175.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-13-233-110-6.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.110.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3bd3f5478632020",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00472c5c8fa183626",
            "tags": {
              "Name": "Vprofile_prod_new"
            },
            "tags_all": {
              "Name": "Vprofile_prod_new"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002e08f0cf8d21f0a"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:internet-gateway/igw-00c1b655fb23ac9a7",
            "id": "igw-00c1b655fb23ac9a7",
            "owner_id": "742982185201",
            "tags": {
              "Name": "New-vprofile-project-Igw"
            },
            "tags_all": {
              "Name": "New-vprofile-project-Igw"
            },
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:loadbalancer/app/vprofile-alb/fa3391dfa87e6a7d",
            "arn_suffix": "app/vprofile-alb/fa3391dfa87e6a7d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "vprofile-alb-470110631.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:loadbalancer/app/vprofile-alb/fa3391dfa87e6a7d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vprofile-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002e08f0cf8d21f0a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00472c5c8fa183626"
              },
              {
                "subnet_id": "subnet-0a81d524bdb41c974"
              }
            ],
            "subnets": [
              "subnet-00472c5c8fa183626",
              "subnet-0a81d524bdb41c974"
            ],
            "vpc_id": "vpc-05dd7c001347b77e4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:listener/app/vprofile-alb/fa3391dfa87e6a7d/425ef923c34f1778",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:targetgroup/vprofile-target-group/d63375d5f799c096",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:listener/app/vprofile-alb/fa3391dfa87e6a7d/425ef923c34f1778",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:loadbalancer/app/vprofile-alb/fa3391dfa87e6a7d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.vprofile",
            "aws_lb_target_group.vprofile",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:targetgroup/vprofile-target-group/d63375d5f799c096",
            "arn_suffix": "targetgroup/vprofile-target-group/d63375d5f799c096",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:targetgroup/vprofile-target-group/d63375d5f799c096",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vprofile-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:targetgroup/vprofile-target-group/d63375d5f799c096-20230713145625203500000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:742982185201:targetgroup/vprofile-target-group/d63375d5f799c096",
            "target_id": "i-0c5ece166aadbf5bd"
          },
          "dependencies": [
            "aws_instance.vprofile_instance",
            "aws_lb_target_group.vprofile",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:route-table/rtb-09fe9d02604327ec7",
            "id": "rtb-09fe9d02604327ec7",
            "owner_id": "742982185201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c1b655fb23ac9a7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "New-vprofile-project-RouteTable"
            },
            "tags_all": {
              "Name": "New-vprofile-project-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd52f2a3b81f7310",
            "route_table_id": "rtb-09fe9d02604327ec7",
            "subnet_id": "subnet-00472c5c8fa183626"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.New-vprofile-project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088782a06b1ab19ed",
            "route_table_id": "rtb-09fe9d02604327ec7",
            "subnet_id": "subnet-0a81d524bdb41c974"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:security-group/sg-070d9f6c2ed4c9e4c",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070d9f6c2ed4c9e4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Vprofile-PrivateSecurityGroup",
            "name_prefix": "",
            "owner_id": "742982185201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:security-group/sg-002e08f0cf8d21f0a",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002e08f0cf8d21f0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Vprofile-PublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "742982185201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:subnet/subnet-03880a39b39166448",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03880a39b39166448",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742982185201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "New-vprofile-project-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "New-vprofile-project-PrivateSubnet-0"
            },
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:subnet/subnet-07643a26db4ef80a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07643a26db4ef80a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742982185201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "New-vprofile-project-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "New-vprofile-project-PrivateSubnet-1"
            },
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:subnet/subnet-00472c5c8fa183626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00472c5c8fa183626",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742982185201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "New-vprofile-project-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "New-vprofile-project-PublicSubnet-0"
            },
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:subnet/subnet-0a81d524bdb41c974",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a81d524bdb41c974",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742982185201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "New-vprofile-project-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "New-vprofile-project-PublicSubnet-1"
            },
            "vpc_id": "vpc-05dd7c001347b77e4"
          },
          "dependencies": [
            "aws_vpc.New-vprofile-project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "New-vprofile-project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:742982185201:vpc/vpc-05dd7c001347b77e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0128259a0c50e3b9b",
            "default_route_table_id": "rtb-037a7cc8e4ea95762",
            "default_security_group_id": "sg-0a110f8e6ef5211de",
            "dhcp_options_id": "dopt-0f13fd4b12accc8b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05dd7c001347b77e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037a7cc8e4ea95762",
            "owner_id": "742982185201",
            "tags": {
              "Name": "New-vprofile-project-Vpc"
            },
            "tags_all": {
              "Name": "New-vprofile-project-Vpc"
            }
          }
        }
      ]
    }
  ]
}